styles.css
@font-face {
  font-family: 'font';
  src: url('font.woff');
}

body {
    background-color: rgb(40, 41, 60);
  }

h1 {
    color: lightgrey;
    font-family: "font", monospace;
    font-weight: 500;
    font-style: bold;
}

p {
  color: lightgrey;
  font-family: "font", monospace;
  font-weight: 500;
  font-style: bold;
}

hr {
  color: lightgrey;
  font-family: "font", monospace;
  font-weight: 500;
  font-style: bold;
}

ul {
  color: lightgrey;
  font-family: "font", monospace;
  font-weight: 500;
  font-style: bold;
}

a {
  color: rgb(255, 238, 198);
}

